# EKSPLEIN (/ɛkˈspleɪn/) is a simple and stupid glossary-like blog
# Copyright (C) 2020 Tom Bazarnik and the contributors

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.

# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "eksplein"
version = "0.0.1"
authors = ["Tom Bazarnik <tommywalkie@gmail.com>"]
edition = "2018"
license = "GPL-3.0+"

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-files = "0.2.2"
ezcli = "0.3.4"
juniper = "0.14.2"
serde = "1.0.103"
serde_json = "1.0.44"
serde_derive = "1.0.103"

[dependencies.redis]
version = "*"